--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ IMAGE_DIR=images
 SCRIPT_DIR=scripts
 PROC_DIR=procs
 BASE_PORT=10000
-EXPORTS=
 MAX_PROCS=8
 RUNUSER=gilliam
+LOGSINK=udp://127.0.0.1:514
