--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Routes==1.13
 WebOb==1.2.3
 argparse==1.2.1
 distribute==0.6.24
-gevent==1.0dev
+git+git://github.com/surfly/gevent.git
 glock==0.1
 greenlet==0.4.0
 pyee==0.1.0
@@ -10,4 +10,6 @@ repoze.lru==0.6
 requests==1.1.0
 wsgiref==0.1.2
 honcho
-procname
+WebTest
+mockito
+nose
