--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ pyee==0.1.0
 repoze.lru==0.6
 requests==1.1.0
 wsgiref==0.1.2
-honcho
+git+git://github.com/gilliam/honcho.git
 WebTest
 mockito
 nose
