--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,9 @@
-Routes==1.13
-WebOb==1.2.3
-argparse==1.2.1
-distribute==0.6.24
+Routes
+WebOb
 git+git://github.com/surfly/gevent.git
-glock==0.1
-greenlet==0.4.0
-pyee==0.1.0
-repoze.lru==0.6
-requests==1.1.0
-wsgiref==0.1.2
+glock
+pyee
+requests
 git+git://github.com/gilliam/honcho.git
 WebTest
 mockito
